--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "symfony/browser-kit": "^4.4",
-        "symfony/css-selector": "^4.4",
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "4.4.*",
         "symfony/debug-bundle": "^4.4",
         "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "^5.1",
