--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -10,8 +10,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
+    "bootswatch": "^4.5.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-ellipse-progress": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
