--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.17.3",
     "bootswatch": "^4.5.3",
     "core-js": "^3.6.5",
+    "cypress": "^6.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.2.0",
