--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -18,6 +18,8 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
+    "vuelidate-error-extractor": "^2.4.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
