--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "mocha"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -15,6 +16,7 @@
     "bootstrap-vue": "^2.17.3",
     "bootswatch": "^4.5.3",
     "core-js": "^3.6.5",
+    "mocha": "^8.2.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.2.0",
