--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuelidate": "^0.7.6",
+    "vuelidate-error-extractor": "^2.4.1"
   },
   "eslintConfig": {
     "root": true,
