--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -28,6 +28,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "hautelook/alice-bundle": "^2.8",
         "justinrainbow/json-schema": "^5.2",
         "symfony/http-client": "4.4.*",
