--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -31,6 +31,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "hautelook/alice-bundle": "^2.8",
         "justinrainbow/json-schema": "^5.2",
+        "nelmio/alice": "^3.8",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
         "symfony/http-client": "4.4.*",
