Internet went out so was unable to commit, but worked on tests, still trying to implement with fixtures -Dylan

--- a/murr-api/fixtures/points.yaml
+++ b/murr-api/fixtures/points.yaml
@@ -4,9 +4,9 @@ App\Entity\Point:
   point1:
     numPoints: 1
     resident: ['@resident1']
-  #point2:
-   #numPoints: 3
-   #resident: ['@resident2']
+  point2:
+    numPoints: 3
+    resident: ['@resident2']
 
 
 #  point3:
