--- a/murr-api/fixtures/points.yaml
+++ b/murr-api/fixtures/points.yaml
@@ -2,18 +2,10 @@ App\Entity\Point:
   point:
     numPoints: 1
   point1:
-    numPoints: 1
     resident: ['@resident1']
   point2:
-    numPoints: 3
-    resident: ['@resident2']
-
-
-#  point3:
-#    resident: ['@resident3']
-#  point4:
-#    resident: [ '@resident3' ]
-#  point5:
-#    resident: [ '@resident3' ]
-#  point6:
-#    resident: [ '@resident3' ]
+    resident: ['@resident1']
+  point3:
+    resident: ['@resident1']
+  point4:
+    resident: ['@resident3']
