Updating Fixtures and Tests: Mainly the setup, The URLS in each test, and making sure we have all teh correct bundles downloaded. --Rae

--- a/murr-api/fixtures/point.yaml
+++ b/murr-api/fixtures/point.yaml
@@ -2,10 +2,11 @@ App\Entity\Point:
   point:
     numPoints: 1
   pointone:
-    resident: [ '@residentone' ]
+    resident: [ '@residentOne' ]
   pointtwo:
-    resident: [ '@residentone' ]
+    resident: [ '@residentOne' ]
   pointthree:
-    resident: [ '@residentone' ]
+    resident: [ '@residentOne' ]
   pointfour:
-    resident: [ '@residentthree' ]
+    resident: [ '@residentThree' ]
+
