--- a/murr-api/fixtures/point.yaml
+++ b/murr-api/fixtures/point.yaml
@@ -1,12 +1,14 @@
 App\Entity\Point:
-  point:
-    numPoints: 1
-  pointone:
-    resident: [ '@residentOne' ]
-  pointtwo:
-    resident: [ '@residentOne' ]
-  pointthree:
-    resident: [ '@residentOne' ]
-  pointfour:
-    resident: [ '@residentThree' ]
+  threePointResidentOne:
+    numPoints: 3
+    resident: ['@residentOne']
+
+#  pointone:
+#    resident: [ '@residentOne' ]
+#  pointtwo:
+#    resident: [ '@residentOne' ]
+#  pointthree:
+#    resident: [ '@residentOne' ]
+#  pointfour:
+#    resident: [ '@residentThree' ]
 
