--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -31,9 +31,11 @@
     "require-dev": {
         "hautelook/alice-bundle": "^2.8",
         "justinrainbow/json-schema": "^5.2",
+        "symfony/browser-kit": "^4.4",
+        "symfony/css-selector": "^4.4",
         "symfony/http-client": "4.4.*",
         "symfony/maker-bundle": "^1.23",
-        "symfony/test-pack": "^1.0"
+        "symfony/phpunit-bridge": "^5.2"
     },
     "config": {
         "preferred-install": {
