Moved qb over to repository and seperated yaml fixtures for now, began work on setting up tests

--- a/murr-api/fixtures/points.yaml
+++ b/murr-api/fixtures/points.yaml
@@ -1,13 +1,13 @@
-#App\Entity\Point:
-#  point1:
-#    numPoint: 0
-#    resident: ['@resident1']
-#  point2:
-#    numPoint: 3
-#    resident: ['@resident2']
-#  point3:
-#    numPoint: 40
-#    resident: ['@resident3']
-#  point4:
-#    numPoint: 40
-#    resident: ['@resident3']
+App\Entity\Point:
+  resident1Points0:
+    numPoint: 0
+    resident: ['@resident1']
+  resident2Point3:
+    numPoint: 3
+    resident: ['@resident2']
+  resident3Point40:
+    numPoint: 40
+    resident: ['@resident3']
+  resident3Points90:
+    numPoint: 90
+    resident: ['@resident3']
