--- a/murr-api/fixtures/test.yaml
+++ b/murr-api/fixtures/test.yaml
@@ -1,25 +1,25 @@
-#App\Entity\Resident:
-#  resident1:
-#    id: 1
-#  resident2:
-#    id: 2
-#  resident3:
-#    id: 3
-#
-#App\Entity\Point:
-#  point1:
-#    id: 1
-#    resident: ['@resident1']
-#    num_Points: 1
-#  point2:
-#    id: 2
-#    resident: ['@resident2']
-#    num_Points: 3
-#  point3:
-#    id: 3
-#    resident: ['@resident3']
-#    num_Points: 40
-#  point4:
-#    id: 4
-#    resident: [ '@resident3' ]
-#    num_Points: 40
+App\Entity\Resident:
+  resident1:
+    id: 1
+  resident2:
+    id: 2
+  resident3:
+    id: 3
+
+App\Entity\Point:
+  point1:
+    id: 1
+    resident: ['@resident1']
+    num_Points: 1
+  point2:
+    id: 2
+    resident: ['@resident2']
+    num_Points: 3
+  point3:
+    id: 3
+    resident: ['@resident3']
+    num_Points: 40
+  point4:
+    id: 4
+    resident: [ '@resident3' ]
+    num_Points: 40
