--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -16,6 +16,8 @@
     "bootstrap-vue": "^2.17.3",
     "bootswatch": "^4.5.3",
     "core-js": "^3.6.5",
+    "flush-promises": "^1.0.2",
+    "nock": "^13.0.6",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-ellipse-progress": "^1.3.0",
