--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -21,6 +21,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/property-access": "4.4.*",
         "symfony/property-info": "4.4.*",
+        "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
@@ -28,15 +29,13 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "hautelook/alice-bundle": "^2.8",
         "justinrainbow/json-schema": "^5.2",
-        "nelmio/alice": "^3.8",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
         "symfony/http-client": "4.4.*",
-        "symfony/maker-bundle": "^1.24",
-        "symfony/phpunit-bridge": "^5.1"
+        "symfony/maker-bundle": "^1.23",
+        "symfony/phpunit-bridge": "^5.2"
     },
     "config": {
         "preferred-install": {
