--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-ellipse-progress": "^1.3.0",
+    "vue-resize-text": "^0.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
