--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
     "@vue/cli-plugin-unit-mocha": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -44,11 +45,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.6.3",
     "mocha": "^8.2.1",
     "vue-template-compiler": "^2.6.11",
     "vuelidate": "^0.7.6",
-    "vuelidate-error-extractor": "^2.4.1",
-    "jest": "^26.6.3"
+    "vuelidate-error-extractor": "^2.4.1"
   },
   "eslintConfig": {
     "root": true,
