--- a/murr-api/fixtures/article.yaml
+++ b/murr-api/fixtures/article.yaml
@@ -1,13 +1,13 @@
 App\Entity\Article:
   article1:
     title: "What Can You Recycle"
-    image: "image1.jpg"
-    info: "Paper, Plastic"
+    image: "http://www.ottawa-information-guide.com/wp-content/uploads/recycle-1170x1129.jpg"
+    info: "Paper, Plastic, and Cardboard"
   article2:
     title: "How to Recycle"
-    image: "image2.jpg"
+    image: "image2url"
     info: "Put in bin"
   article3:
     title: "Hours and Location"
-    image: "image3.jpg"
+    image: "image3url"
     info: "Saskatoon"
