Did the pre-code with Ernesto. Made the changes that Ernesto recommended. We're ready to code the functionality. - Julius and Joshua

--- a/murr-api/fixtures/point.yaml
+++ b/murr-api/fixtures/point.yaml
@@ -2,6 +2,9 @@ App\Entity\Point:
   threePointResidentOne:
     resident: ['@residentOne']
     num_points: 3
+  twentyFivePointResidentFour:
+    resident: ['@residentFour']
+    numb_points: 25
 
   point6:
     resident: ['@resident6']
