--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -34,6 +34,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
+    "axios-mock-adapter": "^1.19.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.3.0",
     "chai-http": "^4.3.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "mocha": "^8.2.1",
+    "moxios": "^0.4.0",
     "vue-template-compiler": "^2.6.11",
     "vuelidate": "^0.7.6",
     "vuelidate-error-extractor": "^2.4.1"
