--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -22,6 +22,7 @@
     "vue-ellipse-progress": "^1.3.0",
     "vue-resize-text": "^0.1.1",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
