Changed the query a little bit in ResidentRepository.php to inlcude id's with more than one digit. Worked on getting the tests to pass. -- Julius and Joshua

--- a/murr-api/fixtures/pickup.yaml
+++ b/murr-api/fixtures/pickup.yaml
@@ -5,11 +5,11 @@ App\Entity\Pickup:
     numCollected: 5
     numObstructed: 0
     numContaminated: 0
-    date: '24-02-2021'
+    date: '2021-01-01T01:00:00.630Z'
 
   PickupTwo:
     site: [ '@SiteTwo' ]
     numCollected: 0
     numObstructed: 2
     numContaminated: 4
-    date: '24-02-2021'
+    date: '2021-01-01T01:00:00.630Z'
