--- a/murr-api/fixtures/point.yaml
+++ b/murr-api/fixtures/point.yaml
@@ -4,7 +4,7 @@ App\Entity\Point:
     num_points: 3
   twentyFivePointResidentFour:
     resident: ['@residentFour']
-    numb_points: 25
+    num_points: 25
 
   point6:
     resident: ['@resident6']
