--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "flush-promises": "^1.0.2",
     "nock": "^13.0.6",
+    "supertest": "^6.1.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-ellipse-progress": "^1.3.0",
@@ -36,7 +37,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.3.0",
+    "chai": "^4.3.3",
     "chai-http": "^4.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -44,7 +45,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "mocha": "^8.2.1",
+    "mocha": "^8.3.1",
     "vue-template-compiler": "^2.6.11",
     "vuelidate": "^0.7.6",
     "vuelidate-error-extractor": "^2.4.1"
