Continued to work on getting the backend tests to run in SitePointsTest. Still having an error 'Trying to get property of non-object'. Looking into how to fix this error --Josh

--- a/murr-api/fixtures/pickup.yaml
+++ b/murr-api/fixtures/pickup.yaml
@@ -1,15 +1,15 @@
 # Story05 - Created two pickup fixtures to be used. One pickup with Site One and one pickup for Site Two.
 App\Entity\Pickup:
   PickupOne:
-    site: ['@SiteOne']
+    site: '@SiteOne'
     numCollected: 5
     numObstructed: 0
     numContaminated: 0
-    date: '2021-01-01T01:00:00.630Z'
+    date: '2021-01-01'
 
   PickupTwo:
-    site: [ '@SiteTwo' ]
+    site: '@SiteTwo'
     numCollected: 0
     numObstructed: 2
     numContaminated: 4
-    date: '2021-01-01T01:00:00.630Z'
+    date: '2021-01-01'
