--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -36,7 +36,8 @@
         "symfony/css-selector": "^4.4",
         "symfony/http-client": "4.4.*",
         "symfony/maker-bundle": "^1.23",
-        "symfony/phpunit-bridge": "^5.2"
+        "symfony/phpunit-bridge": "^5.2",
+        "symfony/var-dumper": "4.4.*"
     },
     "config": {
         "preferred-install": {
