We are getting a issue with our controller. Whenever we post the point, it creates new residents and adds the points to the new ones that are getting created. We are looking at ways to solve this issue --Josh

--- a/murr-api/fixtures/site.yaml
+++ b/murr-api/fixtures/site.yaml
@@ -3,7 +3,7 @@ App\Entity\Site:
   SiteOne:
     siteName: 'Wascana'
     numBins: 5
-    residents: ['@residentOne'], ['@residentTwo'], ['@residentThree']
+    residents: ['@resident6', '@resident7', '@resident8']
 
   SiteTwo:
     siteName: 'Brighton'
