Updated our project environment to match the other groups version. Continued to work on the backend controller and still could not come to a solution to our problem. Will research on own time. --Josh

--- a/murr-api/fixtures/site.yaml
+++ b/murr-api/fixtures/site.yaml
@@ -8,4 +8,4 @@ App\Entity\Site:
   SiteTwo:
     siteName: 'Brighton'
     numBins: 6
-    residents: ['@residentFour'], ['@residentFive']
+    residents: ['@residentFour', '@residentFive']
