--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -26,8 +26,7 @@
         "symfony/serializer": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*",
-        "ext-json": "*"
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.8",
@@ -36,8 +35,7 @@
         "symfony/css-selector": "^4.4",
         "symfony/http-client": "4.4.*",
         "symfony/maker-bundle": "^1.23",
-        "symfony/phpunit-bridge": "^5.2",
-        "symfony/var-dumper": "4.4.*"
+        "symfony/phpunit-bridge": "^5.2"
     },
     "config": {
         "preferred-install": {
