--- a/murr-api/fixtures/site.yaml
+++ b/murr-api/fixtures/site.yaml
@@ -3,7 +3,7 @@ App\Entity\Site:
   SiteOne:
     siteName: 'Wascana'
     numBins: 5
-    residents: ['@resident6', '@resident7', '@resident8']
+    residents: ['@residentOne', '@residentTwo', '@residentThree']
 
   SiteTwo:
     siteName: 'Brighton'
