--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -26,7 +26,8 @@
         "symfony/serializer": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+      "ext-json": "*"
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.8",
