--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -36,7 +36,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.3.3",
+    "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -44,7 +44,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "mocha": "^8.3.1",
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuelidate": "^0.7.6",
     "vuelidate-error-extractor": "^2.4.1"
