--- a/murr-api/config/packages/api_platform.yaml
+++ b/murr-api/config/packages/api_platform.yaml
@@ -1,7 +1,7 @@
+# api/config/packages/api_platform.yaml
 api_platform:
-    mapping:
-        paths: ['%kernel.project_dir%/src/Entity']
-    patch_formats:
-        json: ['application/merge-patch+json']
     swagger:
-        versions: [3]
+        api_keys:
+            apiKey:
+                name: Authorization
+                type: header
