--- a/murr-api/config/packages/security.yaml
+++ b/murr-api/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
         api_user_provider:
             entity:
                 class: App\Entity\Resident
-                property: email
+                property: email, phone
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -28,5 +28,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* matching access control will be used
     access_control:
-        - { path: '^/api/residents', roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: '^/api', roles: ROLE_API }
+        - { path: '^/api/residents', roles: ROLE_API }
+        - { path: '^/api', roles: IS_AUTHENTICATED_ANONYMOUSLY }
