--- a/murr-api/config/packages/security.yaml
+++ b/murr-api/config/packages/security.yaml
@@ -1,32 +1,29 @@
-#config/packages/security.yaml
 security:
     encoders:
         App\Entity\Resident:
-            algorithm: bcrypt
-            cost: 12
-
+            algorithm: auto
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        api_user_provider:
+        app_user_provider:
             entity:
                 class: App\Entity\Resident
-                property: email, phone
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        api:
-            pattern: ^/api/
-            stateless: true
+        main:
             anonymous: true
-            provider: api_user_provider
-            guard:
-                authenticators:
-                    - App\Security\TokenAuthenticator
-
+            json_login:
+                check_path: app_login
+                username_path: username
+                password_path: password
+            # activate different ways to authenticate
+            # https://symfony.com/doc/current/security.html#firewalls-authentication
+            # https://symfony.com/doc/current/security/impersonating_user.html
+            # switch_user: true
     # Easy way to control access for large sections of your site
-    # Note: Only the *first* matching access control will be used
+    # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: '^/api/residents', roles: ROLE_API }
-        - { path: '^/api', roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    # - { path: ^/admin, roles: ROLE_ADMIN }
+    # - { path: ^/profile, roles: ROLE_USER }
