Added the logout functionality to security.yaml and the logout function to SecurityController.php. Fixed a issue with the Login.vue which had a incorrect value being passed to our axios post. Then worked on the Resident entity adding access_control to see if the login functionality was properly working. --Josh

--- a/murr-api/config/packages/security.yaml
+++ b/murr-api/config/packages/security.yaml
@@ -18,6 +18,8 @@ security:
                 check_path: app_login
                 username_path: username
                 password_path: password
+            logout:
+                path: app_logout
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
             # https://symfony.com/doc/current/security/impersonating_user.html
