Worked on design decisions and we are going to have to update our automated tests to consider alphabetical order and pagination for the front. --Lucas

--- a/murr-api/fixtures/site.yaml
+++ b/murr-api/fixtures/site.yaml
@@ -39,7 +39,7 @@ App\Entity\Site:
 
   SiteEight:
     id: 8
-    siteName: 'Hudson Bay Apartments'
+    siteName: 'Applewood Bridge'
     numBins: 7
 
   SiteNine:
