--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "bootswatch": "^4.5.3",
+    "chai-sorted": "^0.2.0",
     "core-js": "^3.6.5",
     "flush-promises": "^1.0.2",
     "nock": "^13.0.6",
