Adjusted the fixtures, so that it will run, and the site database loads with the fixture for the site.yaml, trying to figure out how to put an array of hydra members in to assert json contains. For far fixed the strongly coded errors but ny stuck on implementing the array. --rae

--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -82,5 +82,7 @@
             "allow-contrib": false,
             "require": "4.4.*"
         }
-    }
+    },
+    "name": "",
+    "description": ""
 }
