finally have the location and uri working correctly, still cannot access the cookie even tho the value is in Set-Cookie

--- a/murr-api/config/packages/framework.yaml
+++ b/murr-api/config/packages/framework.yaml
@@ -9,7 +9,7 @@ framework:
     session:
         handler_id: ~
         cookie_secure: auto
-        cookie_samesite: none
+        cookie_samesite: lax
 
     #esi: true
     #fragments: true
