Created a new branch, since we switched over to a token based authentication. Copied over the necessary files needed from our previous branch and added the LexikAuthBundle for the JWT Token authentication. --Joshua

--- a/murr-api/composer.json
+++ b/murr-api/composer.json
@@ -5,12 +5,14 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "api-platform/core": "^2.5",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "4.4.*",
@@ -26,8 +28,7 @@
         "symfony/serializer": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*",
-        "ext-json": "*"
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.8",
