--- a/murr-api/.env
+++ b/murr-api/.env
@@ -34,3 +34,9 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/murr.db"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+#JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+#JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+#JWT_PASSPHRASE=d6eaffa7d95b79cd43bdc8701cc3eb87
+###< lexik/jwt-authentication-bundle ###
