--- a/murr-ui/package.json
+++ b/murr-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "axios-jwt": "^1.7.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "bootswatch": "^4.5.3",
