Added a extra data field with ID on the token returned, which will allow us to access that we can query for that residents information if needed on the front end. --Joshua

--- a/murr-api/config/services.yaml
+++ b/murr-api/config/services.yaml
@@ -34,3 +34,8 @@ services:
         arguments: [ '@request_stack' ]
         tags:
             - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
+
+    acme_api.event.authentication_success_listener:
+        class: App\EventListener\JWTCreatedListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccessResponse }
