Attempting to get front end tests working, running into errors invloving aspects being set as undefined and bootstrap elements not being recognized

--- a/murr-api/fixtures/profile.yaml
+++ b/murr-api/fixtures/profile.yaml
@@ -1,6 +1,6 @@
-App\Entity\Profile:
-  profile1:
-    residentID: 1
-    firstName: "Bill"
-    lastName: "Jones"
-    profilePic: ""
+#App\Entity\Profile:
+#  profile1:
+#    residentID: 1
+#    firstName: "Bill"
+#    lastName: "Jones"
+#    profilePic: ""
