Set up resident fixtures to include profile fixtures. Removed min message for firstName in Profile. Removed Profile tests involving Pictures due to inability to have a failing back end test. Added profile components to resident test, completed Profile tests.

--- a/murr-api/fixtures/profile.yaml
+++ b/murr-api/fixtures/profile.yaml
@@ -1,6 +1,33 @@
-#App\Entity\Profile:
-#  profile1:
-#    residentID: 1
-#    firstName: "Bill"
-#    lastName: "Jones"
-#    profilePic: ""
+App\Entity\Profile:
+  profile1:
+    firstName: "Bill"
+    lastName: "Jones"
+    profilePic: ""
+  profile2:
+    firstName: "Martha"
+    lastName: "Stewart"
+    profilePic: ""
+  profile3:
+    firstName: "Mark"
+    lastName: "Owens"
+    profilePic: ""
+  profile4:
+    firstName: "Terrence"
+    lastName: "Hill"
+    profilePic: ""
+  profile5:
+    firstName: "Snoop"
+    lastName: "Dogg"
+    profilePic: ""
+  profile6:
+    firstName: "Patrick"
+    lastName: "Kane"
+    profilePic: ""
+  profile7:
+    firstName: "Old Bill"
+    lastName: "Jones"
+    profilePic: ""
+  profile8:
+    firstName: "Hannah"
+    lastName: "Montana"
+    profilePic: ""
