--- a/murr-api/fixtures/resident.yaml
+++ b/murr-api/fixtures/resident.yaml
@@ -17,14 +17,15 @@ App\Entity\Resident:
 
     resident6:
         email: "email6@email.com"
-        password: "password"
+        password: '\$argon2id\$v=19\$m=65536,t=4,p=1\$WUZ0NkVGZlN5OFZFR3p3YQ\$Vz9yVVMIVSPc0hZ+Wx70HaYDbN6H5Hi6jeC+qVpnQaQ'
         profile: '@profile6'
     resident7:
         phone: "3065557777"
-        password: "password"
+        password: '\$argon2id\$v=19\$m=65536,t=4,p=1\$WUZ0NkVGZlN5OFZFR3p3YQ\$Vz9yVVMIVSPc0hZ+Wx70HaYDbN6H5Hi6jeC+qVpnQaQ'
         profile: '@profile7'
     resident8:
         email: "email8@email.com"
         phone: "3065558888"
-        password: "password"
+        password: '\$argon2id\$v=19\$m=65536,t=4,p=1\$WUZ0NkVGZlN5OFZFR3p3YQ\$Vz9yVVMIVSPc0hZ+Wx70HaYDbN6H5Hi6jeC+qVpnQaQ'
         profile: '@profile8'
+        roles: ['ROLE_ADMIN']
